--- a/deploy/version_map.yaml
+++ b/deploy/version_map.yaml
@@ -24,3 +24,5 @@ data:
         0.8.1:0.8.1,0.9.0,0.9.1
         0.9.0:0.9.0,0.9.1
         0.9.1:0.9.1
+        0.10.0:0.10.0
+        0.10.0-2976.d7877a9-poc:0.10.0-2976.d7877a9-poc
