add 0.10.0 support version

--- a/charts/pravega-operator/templates/version_map.yaml
+++ b/charts/pravega-operator/templates/version_map.yaml
@@ -29,6 +29,8 @@ data:
         0.8.1:0.8.1,0.9.0,0.9.1,{{ $version }}
         0.9.0:0.9.0,0.9.1,{{ $version }}
         0.9.1:0.9.1,{{ $version }}
+        0.10.0:0.10.0,{{ $version }}
+        0.10.0-2976.d7877a9-poc:0.10.0-2976.d7877a9-poc,{{ $version }}
         {{ $version }}:{{ $version }}
         {{- if $fromVersion }}
         {{ $fromVersion }}:{{ $fromVersion }},{{ $version }}
@@ -53,4 +55,6 @@ data:
         0.8.1:0.8.1,0.9.0,0.9.1
         0.9.0:0.9.0,0.9.1
         0.9.1:0.9.1
+        0.10.0:0.10.0
+        0.10.0-2976.d7877a9-poc:0.10.0-2976.d7877a9-poc
         {{- end }}
